--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,22 +9,23 @@
   },
   "dependencies": {
     "@casino/database": "*",
-    "@casino/game-engine": "*",
     "@casino/fairness": "*",
+    "@casino/game-engine": "*",
     "@casino/shared": "*",
     "@fastify/cors": "^8.5.0",
     "@fastify/jwt": "^7.2.3",
     "@fastify/websocket": "^9.0.0",
-    "fastify": "^4.25.2",
-    "socket.io": "^4.6.0",
-    "bullmq": "^5.1.5",
-    "ioredis": "^5.3.2",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.1.5",
+    "decimal.js": "^10.6.0",
+    "fastify": "^4.25.2",
+    "ioredis": "^5.3.2",
+    "socket.io": "^4.6.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/node": "^20.10.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
