--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,14 +8,15 @@
   },
   "dependencies": {
     "@casino/shared": "*",
+    "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
+    "framer-motion": "^10.16.16",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.4.7",
+    "react-hot-toast": "^2.4.1",
     "socket.io-client": "^4.6.0",
-    "framer-motion": "^10.16.16",
-    "axios": "^1.6.2",
-    "react-hot-toast": "^2.4.1"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
