--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/casinobit"
+DATABASE_URL="mongodb://localhost:27017/casinobit"
 
 # Redis
 REDIS_HOST="localhost"
