--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,15 +4,12 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
-    "generate": "prisma generate",
-    "migrate": "prisma migrate dev",
-    "push": "prisma db push",
-    "studio": "prisma studio"
+    "seed": "tsx seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.1"
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
-    "prisma": "^5.7.1"
+    "tsx": "^4.7.0"
   }
 }
