--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,19 +12,22 @@
     "@casino/fairness": "*",
     "@casino/game-engine": "*",
     "@casino/shared": "*",
-    "@fastify/cors": "^8.5.0",
-    "@fastify/jwt": "^7.2.3",
-    "@fastify/websocket": "^9.0.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.1.5",
+    "cors": "^2.8.5",
     "decimal.js": "^10.6.0",
-    "fastify": "^4.25.2",
+    "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.6.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
