--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.6.0",
+    "uuid": "^9.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "@types/uuid": "^9.0.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
