--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,12 +4,16 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
-    "seed": "tsx seed.ts"
+    "seed": "tsx seeders/index.ts",
+    "seed:games": "tsx seeders/game-config.seeder.ts",
+    "seed:jackpots": "tsx seeders/jackpot.seeder.ts",
+    "indexes": "tsx indexes.ts"
   },
   "dependencies": {
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "@types/node": "^20.0.0"
   }
 }
